<resources>
    <string name="delete_target_label">Delete</string>
    <string name="delete_target_uninstall_label">Uninstall</string>
    <string name="info_target_label">App info</string>
    <string name="abc_action_bar_home_description">Navigate home</string>
    <string name="abc_action_bar_home_description_format">%1$s, %2$s</string>
    <string name="abc_action_bar_home_subtitle_description_format">%1$s, %2$s, %3$s</string>
    <string name="abc_action_bar_up_description">Navigate up</string>
    <string name="abc_action_menu_overflow_description">More options</string>
    <string name="abc_action_mode_done">Done</string>
    <string name="abc_activity_chooser_view_see_all">See all</string>
    <string name="abc_activitychooserview_choose_application">Choose an app</string>
    <string name="abc_capital_off">OFF</string>
    <string name="abc_capital_on">ON</string>
    <string name="abc_search_hint">Search…</string>
    <string name="abc_searchview_description_clear">Clear query</string>
    <string name="abc_searchview_description_query">Search query</string>
    <string name="abc_searchview_description_search">Search</string>
    <string name="abc_searchview_description_submit">Submit query</string>
    <string name="abc_searchview_description_voice">Voice search</string>
    <string name="abc_shareactionprovider_share_with">Share with</string>
    <string name="abc_shareactionprovider_share_with_application">Share with %s</string>
    <string name="abc_toolbar_collapse_description">Collapse</string>
    <string name="accessibility_all_apps_button">Apply</string>
    <string name="accessibility_delete_button">Delete</string>
    <string name="accessibility_search_button">Search</string>
    <string name="accessibility_voice_search_button">Voice search</string>
    <string name="activity_not_found">"App isn't installed"</string>
    <string name="all_apps_button_label">Apply</string>
    <string name="all_apps_cling_add_item">Hold an app to add it to Home screen</string>
    <string name="all_apps_cling_title">Choose some apps</string>
    <string name="all_apps_home_button_label">Home screen</string>
    <string name="announce_selection">%1$s selected</string>
    <string name="application_name">System launcher</string>
    <string name="apps_customize_apps_scroll_format">Apps: page %1$d of %2$d</string>
    <string name="apps_customize_widgets_scroll_format">Widgets: page %1$d of %2$d</string>
    <string name="cab_app_selection_text">1 app selected</string>
    <string name="cab_folder_selection_text">1 folder selected</string>
    <string name="cab_menu_app_info">App Details</string>
    <string name="cab_menu_delete_app">Uninstall App</string>
    <string name="cab_shortcut_selection_text">1 shortcut selected</string>
    <string name="cab_widget_selection_text">1 widget selected</string>
    <string name="cancel_action">Cancel</string>
    <string name="cling_dismiss">Uninstall</string>
    <string name="completely_out_of_space">No free space on Home screen.</string>
    <string name="crop_wallpaper">Crop wallpaper</string>
    <string name="custom_workspace_cling_description_1" />
    <string name="custom_workspace_cling_description_2" />
    <string name="custom_workspace_cling_title_1" />
    <string name="custom_workspace_cling_title_2" />
    <string name="default_scroll_format">Page %1$d of %2$d</string>
    <string name="delete_zone_label_all_apps">Uninstall</string>
    <string name="delete_zone_label_all_apps_system_app">Uninstall update</string>
    <string name="delete_zone_label_workspace">Delete</string>
    <string name="dream_name">Rocket launcher</string>
    <string name="external_drop_widget_error">"Couldn't drop item on this Home screen."</string>
    <string name="external_drop_widget_pick_title">Choose widget to create</string>
    <string name="first_run_cling_create_screens_hint">Create more screens for apps and folders</string>
    <string name="first_run_cling_custom_content_hint" />
    <string name="first_run_cling_description">Create your own screen</string>
    <string name="first_run_cling_search_bar_hint" />
    <string name="first_run_cling_title">Welcome!</string>
    <string name="folder_cling_create_folder">To create a similar folder, hold an app and move it over another.</string>
    <string name="folder_cling_title">"Here's a folder"</string>
    <string name="folder_closed">Folder closed</string>
    <string name="folder_hint_text">Unnamed folder</string>
    <string name="folder_name" />
    <string name="folder_name_format">Folder: %1$s</string>
    <string name="folder_opened">Folder opened, size: %1$d x %2$d</string>
    <string name="folder_renamed">Folder renamed as %1$s</string>
    <string name="folder_tap_to_close">Touch to close folder</string>
    <string name="folder_tap_to_rename">Touch to keep the name</string>
    <string name="gadget_error_text">Widget loading error</string>
    <string name="group_applications">Apps</string>
    <string name="group_shortcuts">Shortcuts</string>
    <string name="group_widgets">Widgets</string>
    <string name="home">Home screen</string>
    <string name="hotseat_out_of_space">No free space at the bottom.</string>
    <string name="invalid_hotseat_item">This widget is too big for this zone</string>
    <string name="long_press_widget_to_add">Touch and hold to pick up a widget.</string>
    <string name="market">Shop</string>
    <string name="menu_item_add_item">Add to Home screen</string>
    <string name="out_of_space">No free space on this screen.</string>
    <string name="permdesc_install_shortcut">Allows app to add shortcut automatically</string>
    <string name="permdesc_read_settings">Allows app to read Home screen settings and shortcuts.</string>
    <string name="permdesc_uninstall_shortcut">Allows app to remove shortcuts automatically</string>
    <string name="permdesc_write_settings">Allows app to change Home screen settings and shortcuts.</string>
    <string name="permlab_install_shortcut">Install shortcuts</string>
    <string name="permlab_read_settings">Read Home screen settings and shortcuts</string>
    <string name="permlab_uninstall_shortcut">Uninstall shortcuts</string>
    <string name="permlab_write_settings">Write Home screen settings and shortcuts</string>
    <string name="pick_image">Select image</string>
    <string name="pick_wallpaper">Wallpaper</string>
    <string name="rename_action">OK</string>
    <string name="rename_folder_label">Folder name</string>
    <string name="rename_folder_title">Rename folder</string>
    <string name="settings_button_text">Align icons</string>
    <string name="shortcut_duplicate">%s shortcut exists already.</string>
    <string name="shortcut_installed">Shortcut %s is created.</string>
    <string name="shortcut_uninstalled">Shortcut %s is deleted.</string>
    <string name="status_bar_notification_info_overflow">999+</string>
    <string name="title_select_application">Select apps</string>
    <string name="title_select_shortcut">Select shortcuts</string>
    <string name="toggle_weight_watcher">Show storage space</string>
    <string name="uid_name">Android core apps</string>
    <string name="uninstall_system_app_text">"A system app can't be uninstalled"</string>
    <string name="wallpaper_accessibility_name">Wallpaper %1$d of %2$d</string>
    <string name="wallpaper_button_text">Wallpaper</string>
    <string name="wallpaper_delete">Delete</string>
    <string name="wallpaper_instructions">Set wallpaper</string>
    <string name="widget_adder">Widgets</string>
    <string name="widget_button_text">Add widget</string>
    <string name="widget_dims_format">%1$d × %2$d</string>
    <string name="widgets_tab_label">Add widget</string>
    <string name="workspace_cling_move_item">Touch and hold background to manage wallpapers, widgets, and settings.</string>
    <string name="workspace_cling_title">Organize your space</string>
    <string name="workspace_description_format">Home screen %1$d</string>
    <string name="workspace_scroll_format">Home screen: %1$d of %2$d</string>
    <string name="app_name">ForceTouch</string>
    <string name="bottom_alignment">Align to bottom</string>
    <string name="cling_overview_gathering">"Pinch in with two fingers
to organize icons, change wallpaper and add widgets"</string>
    <string name="cling_overview_longpress">"Tap and hold an empty area on home screen
to organize icons, change wallpaper and add widgets"</string>
    <string name="cling_search_fling">"Swipe up with one finger
to open search screen"</string>
    <string name="default_folder_name">Folder</string>
    <string name="education_folder">Education</string>
    <string name="featured_plug">Featured apps</string>
    <string name="finance_folder">Finance</string>
    <string name="game_folder">Games</string>
    <string name="has_mark_read">Has mark read</string>
    <string name="has_mark_unread">Has mark unread</string>
    <string name="health_folder">Health</string>
    <string name="iconarrange_alignment_tips">Shake the phone to align icons</string>
    <string name="iconarrange_click_tips">Tap to select apps</string>
    <string name="iconarrange_drag_overcount">Cannot select anymore</string>
    <string name="iconarrange_drag_tips">Drag icon to screen thumbnail</string>
    <string name="iconarrange_tips">Tap to select app</string>
    <string name="life_folder">Life</string>
    <string name="lifecenter_update_msg">Life has been updated. Reload?</string>
    <string name="local_gallery">Gallery</string>
    <string name="more_wallpaper">More wallpapers</string>
    <string name="mzuc_cancel">Cancel</string>
    <string name="mzuc_cancel_download">Cancel download</string>
    <string name="mzuc_cancel_install">Cancel installation</string>
    <string name="mzuc_delete">Delete</string>
    <string name="mzuc_download">Download</string>
    <string name="mzuc_download_fail">Download failed</string>
    <string name="mzuc_download_finish_install">Download completed, tap to install</string>
    <string name="mzuc_download_finish_s" formatted="false">%s V%s download completed</string>
    <string name="mzuc_download_progress_desc_s" formatted="false">Downloading %s %s</string>
    <string name="mzuc_downloading">Downloading</string>
    <string name="mzuc_file_size_s">Size: %s</string>
    <string name="mzuc_found_update_s">Update available: %s</string>
    <string name="mzuc_install_cancel_tip">Download canceled</string>
    <string name="mzuc_install_fail">Installation failed</string>
    <string name="mzuc_install_immediately">Install now</string>
    <string name="mzuc_install_later">Install later</string>
    <string name="mzuc_installing">Installing</string>
    <string name="mzuc_notification_message_s">%s</string>
    <string name="mzuc_ok">OK</string>
    <string name="mzuc_reboot_update_now">Restart &amp; Update</string>
    <string name="mzuc_retry">Retry</string>
    <string name="mzuc_skip_version">Ignore</string>
    <string name="mzuc_skip_warn_tip">If you skip this version, you will not be prompted to install it</string>
    <string name="mzuc_update_finish">Update completed</string>
    <string name="mzuc_update_immediately">Update now</string>
    <string name="mzuc_update_later">Remind Later</string>
    <string name="mzuc_update_mobile_network">Download using cellular data?</string>
    <string name="mzuc_update_msg_title_s" formatted="false">%s V%s</string>
    <string name="mzuc_update_title_s" formatted="false">%s V%s release</string>
    <string name="mzuc_wait_tip">Please wait</string>
    <string name="mzuc_warn_later">Remind Later</string>
    <string name="navigation_folder">Navigation</string>
    <string name="nfc_share">Tap to select or cancel the apps you want to share</string>
    <string name="nfc_share_title">Share apps via NFC</string>
    <string name="top_alignment">Align to top</string>
    <string name="zhengli">Arrange icons</string>
</resources>