<?xml version="1.0" encoding="utf-8"?>
<FrameLayout android:layout_gravity="bottom|center" android:paddingBottom="@dimen/overview_panel_bottom_padding" android:layout_width="fill_parent" android:layout_height="wrap_content"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <LinearLayout android:gravity="center_horizontal" android:orientation="horizontal" android:layout_width="fill_parent" android:layout_height="fill_parent">
        <LinearLayout android:orientation="vertical" android:id="@id/arrangeicon_button" android:layout_width="@dimen/overview_panel_item" android:layout_height="wrap_content">
            <FrameLayout android:layout_width="fill_parent" android:layout_height="wrap_content">
                <com.meizu.flyme.launcher.ArrangeIconView android:id="@id/arrange_view" android:background="@drawable/ic_arrange" android:layout_width="fill_parent" android:layout_height="fill_parent" />
                <ImageView android:id="@id/arrange_icon" android:layout_width="fill_parent" android:layout_height="fill_parent" android:src="@drawable/arrange_button" />
            </FrameLayout>
            <TextView android:textSize="@dimen/overview_panel_item_text_size" android:textColor="@color/bottom_text_color" android:ellipsize="end" android:layout_gravity="center_horizontal" android:id="@id/arrange_text" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/zhengli" android:singleLine="true" android:textAllCaps="false" />
        </LinearLayout>
        <Space android:layout_width="@dimen/overview_panel_buttonSpacing" android:layout_height="wrap_content" />
        <TextView android:textSize="@dimen/overview_panel_item_text_size" android:textColor="@color/bottom_text_color" android:ellipsize="end" android:gravity="center_horizontal" android:id="@id/alignment_button" android:visibility="gone" android:layout_width="@dimen/overview_panel_item" android:layout_height="wrap_content" android:text="@string/settings_button_text" android:singleLine="true" android:drawableTop="@drawable/arrange_button" android:drawablePadding="@dimen/overview_panel_item_text_icon_padding" android:textAllCaps="false" />
        <LinearLayout android:orientation="vertical" android:id="@id/widget_button" android:layout_width="@dimen/overview_panel_item" android:layout_height="wrap_content">
            <FrameLayout android:layout_width="fill_parent" android:layout_height="wrap_content">
                <com.meizu.flyme.launcher.WidgetIconView android:id="@id/widget_view" android:background="@drawable/ic_widget" android:layout_width="fill_parent" android:layout_height="fill_parent" />
                <ImageView android:id="@id/widget_icon" android:layout_width="fill_parent" android:layout_height="fill_parent" android:src="@drawable/widget_button" />
            </FrameLayout>
            <TextView android:textSize="@dimen/overview_panel_item_text_size" android:textColor="@color/bottom_text_color" android:ellipsize="end" android:layout_gravity="center_horizontal" android:id="@id/widget_text" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/widget_button_text" android:singleLine="true" android:textAllCaps="false" />
        </LinearLayout>
        <Space android:layout_width="@dimen/overview_panel_buttonSpacing" android:layout_height="wrap_content" />
        <LinearLayout android:orientation="vertical" android:id="@id/wallpaper_button" android:layout_width="@dimen/overview_panel_item" android:layout_height="wrap_content">
            <FrameLayout android:layout_width="fill_parent" android:layout_height="wrap_content">
                <com.meizu.flyme.launcher.WallpaperIconView android:id="@id/smartwallpaper_view" android:background="@drawable/ic_smartwallpaper" android:layout_width="fill_parent" android:layout_height="fill_parent" />
                <ImageView android:id="@id/wallpaper_icon" android:layout_width="fill_parent" android:layout_height="fill_parent" android:src="@drawable/smart_wallpaper_button" />
            </FrameLayout>
            <TextView android:textSize="@dimen/overview_panel_item_text_size" android:textColor="@color/bottom_text_color" android:ellipsize="end" android:layout_gravity="center_horizontal" android:id="@id/wallpaper_text" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/wallpaper_button_text" android:singleLine="true" android:textAllCaps="false" />
        </LinearLayout>
    </LinearLayout>
    <LinearLayout android:orientation="horizontal" android:layout_width="fill_parent" android:layout_height="fill_parent">
        <TextView android:textSize="14.0sp" android:textColor="@color/bottom_text_color" android:ellipsize="end" android:gravity="center_horizontal" android:id="@id/top_button" android:visibility="gone" android:layout_width="@dimen/overview_panel_item" android:layout_height="wrap_content" android:text="@string/top_alignment" android:singleLine="true" android:drawableTop="@drawable/top_alignment_button" android:drawablePadding="0.0dip" android:textAllCaps="false" />
        <Space android:layout_width="@dimen/overview_panel_buttonSpacing" android:layout_height="wrap_content" />
        <TextView android:textSize="14.0sp" android:textColor="@color/bottom_text_color" android:ellipsize="end" android:gravity="center_horizontal" android:id="@id/bottom_button" android:visibility="gone" android:layout_width="@dimen/overview_panel_item" android:layout_height="wrap_content" android:text="@string/bottom_alignment" android:singleLine="true" android:drawableTop="@drawable/bottom_alignment_button" android:drawablePadding="0.0dip" android:textAllCaps="false" />
    </LinearLayout>
</FrameLayout>